--- a/src/mmw/sass/pages/_compare.scss
+++ b/src/mmw/sass/pages/_compare.scss
@@ -147,6 +147,7 @@
                       z-index: 10;
                       padding: 0;
                       margin-top: 10px;
+                      width: 100%;
 
                       label {
                         display: table;
